--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "typescript": ">=4.5.0"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.0.2"
+    "@openzeppelin/contracts": "^5.0.2",
+    "@openzeppelin/contracts-upgradeable": "^5.0.2"
   },
   "scripts": {
     "prettier": "prettier --write \"**/*.{js,json,md,sol,ts}\""
